further typos and clean-up of inconsistency (e.g., wrt. packed sub-word count/width)

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -5,7 +5,7 @@
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline                                                                             
+\hline\hline                                                                             
 \multirow{12}{*}{1}   & \XCSYNTAXUSE{xc.xcr2gpr}   & \REFSEC{sec:spec:instruction:xc.xcr2gpr}   \\
                       & \XCSYNTAXUSE{xc.gpr2xcr}   & \REFSEC{sec:spec:instruction:xc.gpr2xcr}   \\
                       & \XCSYNTAXUSE{xc.cmov}      & \REFSEC{sec:spec:instruction:xc.cmov}      \\
@@ -32,7 +32,7 @@ Class                 & Syntax                     & Section                    
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline                                                                             
+\hline\hline                                                                             
 \multirow{ 3}{*}{2.1} & \XCSYNTAXUSE{xc.rngtest}   & \REFSEC{sec:spec:instruction:xc.rngtest}   \\
                       & \XCSYNTAXUSE{xc.rngseed}   & \REFSEC{sec:spec:instruction:xc.rngseed}   \\
                       & \XCSYNTAXUSE{xc.rngsamp}   & \REFSEC{sec:spec:instruction:xc.rngsamp}   \\
@@ -50,7 +50,7 @@ Class                 & Syntax                     & Section                    
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline                                                                             
+\hline\hline                                                                             
 \multirow{ 4}{*}{2.2} & \XCSYNTAXUSE{xc.scatter.b} & \REFSEC{sec:spec:instruction:xc.scatter.b} \\
                       & \XCSYNTAXUSE{xc.scatter.h} & \REFSEC{sec:spec:instruction:xc.scatter.h} \\
                       & \XCSYNTAXUSE{xc.gather.b}  & \REFSEC{sec:spec:instruction:xc.gather.b}  \\
@@ -69,7 +69,7 @@ Class                 & Syntax                     & Section                    
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline                                                                             
+\hline\hline                                                                             
 \multirow{ 7}{*}{2.3} & \XCSYNTAXUSE{xc.ld.hi}     & \REFSEC{sec:spec:instruction:xc.ld.hi}     \\
                       & \XCSYNTAXUSE{xc.ld.li}     & \REFSEC{sec:spec:instruction:xc.ld.li}     \\
                       & \XCSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instruction:xc.bop}       \\
@@ -91,7 +91,7 @@ Class                 & Syntax                     & Section                    
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline                                                                             
+\hline\hline                                                                             
 \multirow{15}{*}{2.4} & \XCSYNTAXUSE{xc.padd}      & \REFSEC{sec:spec:instruction:xc.padd}      \\
                       & \XCSYNTAXUSE{xc.psub}      & \REFSEC{sec:spec:instruction:xc.psub}      \\
                       & \XCSYNTAXUSE{xc.pmul.l}    & \REFSEC{sec:spec:instruction:xc.pmul.l}    \\
@@ -121,7 +121,7 @@ Class                 & Syntax                     & Section                    
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline                                                                             
+\hline\hline                                                                             
 \multirow{15}{*}{2.5} & \XCSYNTAXUSE{xc.madd.2}    & \REFSEC{sec:spec:instruction:xc.madd.2}    \\
                       & \XCSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instruction:xc.madd.3}    \\
                       & \XCSYNTAXUSE{xc.msub.2}    & \REFSEC{sec:spec:instruction:xc.msub.2}    \\
