--- a/docs/specification/bg-compatibility.tex
+++ b/docs/specification/bg-compatibility.tex
@@ -20,7 +20,7 @@
       \noindent
       In some cases overlap exists, potentially representing an opportunity
       for unification; in other cases the underlying goal, approach, and/or
-      ethos is distinct.
+      ethos is distinct and thus incompatible.
 
 \item Several features of \XCID are intended to avoid conflicts with existing 
       or future extensions:
