--- a/docs/specification/bg-feature.tex
+++ b/docs/specification/bg-feature.tex
@@ -8,7 +8,7 @@
 \begin{tabular}{|l|l|cc|}
 \hline
 Description                                & Class           & Numeric ID & Mnemonic ID \\
-\hline
+\hline\hline
 \multirow{1}{*}{Required                 } & Baseline        & $1$        & BASE        \\
 \hline
 \multirow{5}{*}{Optional, general-purpose} & Randomness      & $2.1$      & RND         \\
@@ -26,21 +26,16 @@ Description                                & Class           & Numeric ID & Mnem
 \end{table}
 
 Per \REFSEC{sec:bg:concept}, \XCID is a {\em meta}-extension in that it has 
-a) one baseline feature class,
+a) one     required, baseline feature class,
    which must {\em always} be supported,
    plus
-b) several optional feature classes,
+b) several optional           feature classes,
    which can be {\em selectively} supported to suit.
-It acts to mirror the extensibility afforded by RV32I itself, with similar
-motivation: doing so allows one to tailor the ISE (resp. ISA) st. it suits
-a given context, which is important because some features are applicable 
-within a broad range of cryptographic workloads whereas others are (more) 
-specifically applicable (even niche).  Although \REFSEC{sec:spec} offers a 
-precise specification, keep in mind that
-support for a given feature class can be determined programmatically using 
-an associated CSR,
-and
-all feature classes in \XCID can emulated by using RV32I alone.
+To some extent, this mirrors the extensibility afforded by RV32I itself, 
+with similar motivation: doing so allows one to tailor the ISE (resp. ISA) 
+st. it suits a given context, which is important because some features are 
+applicable within a broad range of cryptographic workloads whereas others 
+are (more) specifically applicable (even niche).
 
 The RISC-V naming convention~\cite[Section 22]{SCARV:RV:ISA:I:17} for ISEs
 uses a string of single-character identifiers to specify features realised
@@ -55,7 +50,7 @@ feature class (summarised by \REFTAB{tab:feature}).  For example,
 \XCID[1/2.1/2.2/2.3/2.4] ~\equiv~ \XCID[BASE/RND/MEM/BIT/PACK]
 \]
 describes an implementation which supports
-a) the core features,
+a) the baseline features,
 b) features relating to generation of randomness,
 c) features relating to advanced memory access, namely scatter/gather
    style store and load operations,
@@ -74,10 +69,11 @@ AES), but {\em not} asymmetric cryptography (e.g., RSA).
 introduce
 
 \begin{itemize}
-\item $1$ additional $16$-entry co-processor register file,
+\item $1$ additional register file
+      (see \REFSEC{sec:spec:state:xcr}),
       and
 \item $2$ additional CSRs 
-      (one is used to report on features in, the other to control an implementation of \XCID),
+      (see \REFSEC{sec:spec:state:csr}),
 \end{itemize}
 
 \noindent
@@ -87,7 +83,7 @@ to said state.
 \subparagraph{Register-register data transfer.}
 
 A suite of instructions
-(e.g., \VERB[RV]{xc.gpr2xcr})
+(e.g., \VERB[RV]{xc.gpr2xcr}; see \REFSEC{sec:spec:instruction:xc.gpr2xcr})
 that allow 
 transfer of content between
 the general-purpose register file (i.e., $\GPR$)
@@ -95,7 +91,7 @@ and
 the    co-processor register file (i.e., $\XCR$)
 is included.
 In addition, support 
-(e.g., \VERB[RV]{xc.cmov})
+(e.g., \VERB[RV]{xc.cmov}; see \REFSEC{sec:spec:instruction:xc.cmov})
 for conditional, branch'less moves of content between $\XCR$ registers 
 (cf. x86 \VERB{cmov}~\cite[Page 3-149--3-152]{SCARV:X86:2:18})
 is included; such instructions form a common, vital component
@@ -105,7 +101,7 @@ in realisations of countermeasures against side-channel attack.
 \subparagraph{Register-memory   data transfer.}
 
 A suite of instructions 
-(e.g., \VERB[RV]{xc.ld.w} and \VERB[RV]{xc.st.w})
+(e.g., \VERB[RV]{xc.ld.w} and \VERB[RV]{xc.st.w}; see \REFSEC{sec:spec:instruction:xc.ld.w} and \REFSEC{sec:spec:instruction:xc.st.w})
 that allow 
 transfer of content between
    memory                         (i.e., $\MEM$)
@@ -119,8 +115,8 @@ Although most are analogous to RV32I, there are some differences: note that
 
 \begin{itemize}
 \item variants that support different access granularity (e.g., halfword or
-      byte) are included; variants that support inserting (vs. overwriting)
-      load semantics are also included,
+      byte) are included; variants that support updating (or inserting, vs. 
+      overwriting) load semantics are also included,
 \item matching the context, access is considered to be unsigned throughout;
       there are no sign-extending variants, for example.
 \end{itemize}
@@ -151,10 +147,10 @@ ARMv8.5-A\footnote{
 a suite of instructions 
 that allow 
 manipulation, e.g.,
- sampling entropy from (via \VERB[RV]{xc.rngsamp})
+ sampling entropy from (via \VERB[RV]{xc.rngsamp}; see \REFSEC{sec:spec:instruction:xc.rngsamp})
 or
-injecting entropy into (via \VERB[RV]{xc.rngseed})
-of a (T)RNG implementation.
+injecting entropy into (via \VERB[RV]{xc.rngseed}; see \REFSEC{sec:spec:instruction:xc.rngseed})
+a (T)RNG implementation.
 
 % -----------------------------------------------------------------------------
 
@@ -178,7 +174,8 @@ some intermediate state to realise some form of confusion step: see, e.g.,
 \cite[Section 1.3]{SCARV:KnuRob:11}.
 From an implementation perspective, it is common to store each S-box as a
 look-up table; although said pre-computation implies some memory overhead
-(related to $n$ and $m$).
+(related to $n$ and $m$), the reduction in (online) computation typically
+reduces latency.
 However, as outlined by Fiskiran and Lee~\cite{SCARV:FisLee:01}, {\em if}
 such an approach is used then the addressing modes available {\em may} be
 a factor in any concrete improvement in latency.
@@ -187,7 +184,7 @@ This, taken as an exemplar from a richer set of examples, forms motivation
 for a richer set of addressing modes than available (by design) in RV32I.
 In particular, 
 a suite of instructions 
-(e.g., \VERB[RV]{xc.scatter.b} and \VERB[RV]{xc.gather.b})
+(e.g., \VERB[RV]{xc.scatter.b} and \VERB[RV]{xc.gather.b}; see \REFSEC{sec:spec:instruction:xc.scatter.b} and \REFSEC{sec:spec:instruction:xc.gather.b})
 that allow 
 scatter/gather-based
 transfer of content between
@@ -266,7 +263,7 @@ b) care should be taken to distinguish this concept from traditional vector
    differences include dedicated support for vector data types, vs. what
    could be viewed as retro-fitting packed sub-words in a scalar data type.
 It is common to describe packed arithmetic as an instance of a more general
-Single Instruction, Multiple Data (SIMD) concept, with the term SIMD Within 
+Single Instruction, Multiple Data (SIMD) model, with the term SIMD Within 
 A Register (SWAR) further highlighting specifics of the instantiation.
 
 Concrete examples of support for packed operations include
@@ -311,7 +308,7 @@ implicit (e.g., status flags for carry or borrow)
 state.
 Such an approach is particularly attractive when set within the context of 
 RV32I, because it avoids inclusion of status flags and so forces (somewhat 
-high overhead) software-based carry and overflow detection.
+high overhead) software-based carry and overflow management.
 
 % -----------------------------------------------------------------------------
 
@@ -329,14 +326,13 @@ optimisation goals (e.g., wrt. time or space)
 that stem from flexibility afforded by the underlying design.
 Focusing on the trade-off between time and space (or area), it is common
 to accelerate a software-based AES implementation using bespoke hardware.
-Doing so aligns with reduction of latency, in use-cases such as ``bulk''
-encryption (e.g., of network traffic), and a rich associated literature
-(see, e.g., \REFAPPX{appx:related}); put simply, ISEs designed to support 
-AES can be a sane and well explored approach.
+Doing so aligns with reduction of latency in use-cases such as ``bulk''
+encryption (e.g., of network traffic), and, as such, is supported by a
+rich lineage of designs and results (see, e.g., \REFAPPX{appx:related}).
 
 \XCID includes a suite of instructions 
 (e.g., \VERB[RV]{xc.aes.sub} and \VERB[RV]{xc.aes.mix})
-drawn directly from the design and analysis of 
+drawn directly from the design of
 Tillich and Gro{\ss}sch\"{a}dl~\cite{SCARV:TilGro:06}.
 The constituent ISE supports a $32$-bit, column-oriented implementation 
 of AES, focusing on the
