--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -85,7 +85,7 @@
 % -----------------------------------------------------------------------------
 
 \XCINSTR{xc.ld.b} {crd, h, b, imm11(rs1)}{
-  \iencldbu
+  % TODO: encoding
 }{
   Load a     byte from memory
   into a specific     byte of a $\XCR$ register,
@@ -106,7 +106,7 @@
 % -----------------------------------------------------------------------------
 
 \XCINSTR{xc.ld.h} {crd, h,    imm11(rs1)}{
-  \iencldhu
+  % TODO: encoding
 }{
   Load a halfword from memory
   into a specific halfword of a $\XCR$ register,
@@ -210,15 +210,15 @@
   Inspect the RNG state, applying a suitable ``health check'' on the level 
   of entropy available: the status flag is stored in a $\GPR$ register.
   If, after execution \VERB[RV]{xc.rngseed},
-         $\GPR[*][{\VERB[RV]{rd1}}] =    0$
-  (resp. $\GPR[*][{\VERB[RV]{rd1}}] \neq 0$),
+         $\GPR[*][{\VERB[RV]{rd1}}] \neq 0$
+  (resp. $\GPR[*][{\VERB[RV]{rd1}}] =    0$),
   then the RNG has 
-         insufficient 
-  (resp.   sufficient)
+           sufficient 
+  (resp. insufficient)
   entropy; the next output sampled via \VERB[RV]{xc.rngsamp} 
   therefore
-         cannot 
-  (resp. can)
+         can
+  (resp. cannot)
   be used.
 }{
   $\GPR[*][{\VERB[RV]{rd1}}] \TEST{\ASN} \RNG$ \;
@@ -491,6 +491,20 @@ specified in the instruction encoding implies a field width of
 $
 w = 32 / \VERB[RV]{n} .
 $
+As such, said encoding yields the following cases
+\[
+\begin{array}{ccrcc@{\;}c@{\;}rc@{\;}c@{\;}r}
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{000}{2} &\mapsto& \VERB[RV]{n} &=&  1 & w &=& 32     \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{001}{2} &\mapsto& \VERB[RV]{n} &=&  2 & w &=& 32     \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{010}{2} &\mapsto& \VERB[RV]{n} &=&  4 & w &=& 32     \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{011}{2} &\mapsto& \VERB[RV]{n} &=&  8 & w &=& 32     \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{100}{2} &\mapsto& \VERB[RV]{n} &=& 16 & w &=& 32     \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{101}{2} &\mapsto& \multicolumn{6}{c}{\mbox{invalid}} \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{110}{2} &\mapsto& \multicolumn{6}{c}{\mbox{invalid}} \\
+\VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} &=& \RADIX{111}{2} &\mapsto& \multicolumn{6}{c}{\mbox{invalid}} \\
+\end{array}
+\]
+where cases marked invalid are reserved.
 
 % -----------------------------------------------------------------------------
 
@@ -501,7 +515,7 @@ $
   implying $\odot = +$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} .
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) .
   $
 }{
   $w = 32 / \VERB[RV]{n}$ \;
@@ -519,7 +533,7 @@ $
   implying $\odot = -$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} .
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) .
   $
 }{
   $w = 32 / \VERB[RV]{n}$ \;
@@ -537,7 +551,7 @@ $
   implying $\odot = \times$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that this instruction captures the  ``low'' half, or $w$ LSBs of 
   each computed product
@@ -559,7 +573,7 @@ $
   implying $\odot = \times$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that this instruction captures the ``high'' half, or $w$ MSBs of 
   each computed product
@@ -581,7 +595,7 @@ $
   implying $\odot = \otimes$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that this instruction captures the  ``low'' half, or $w$ LSBs of 
   each computed product
@@ -603,7 +617,7 @@ $
   implying $\odot = \otimes$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that this instruction captures the ``high'' half, or $w$ MSBs of 
   each computed product
@@ -625,7 +639,7 @@ $
   implying $\odot = \LSH$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that any out-of-range distance
   $
@@ -652,7 +666,7 @@ $
   implying $\odot = \LSH$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that any out-of-range distance
   $
@@ -678,7 +692,7 @@ $
   implying $\odot = \RSH$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that any out-of-range distance
   $
@@ -705,7 +719,7 @@ $
   implying $\odot = \RSH$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that any out-of-range distance
   $
@@ -731,7 +745,7 @@ $
   implying $\odot = \LRT$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that the effective distance is
   $
@@ -753,7 +767,7 @@ $
   implying $\odot = \LRT$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  \VERB[RV]{n} = 1 \LSH ( \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ) ,
   $
   and that the effective distance is
   $
@@ -843,7 +857,7 @@ $
 $
 of register addresses st.
 a) $\VERB[RV]{crd2} = \VERB[RV]{crd1} + 1$
-   (the contiguousness rule),
+   (the contiguous'ness rule),
    and
 b) $\VERB[RV]{crd2} = 1 \pmod{2}$
    and 
@@ -868,8 +882,8 @@ i.e.,
 \]
 noting
 $\TUPLE{ 1, 0 }$ and $\TUPLE{ 3, 2 }$ are deemed valid pairs,
-$\TUPLE{ 3, 0 }$ is invalid because it violates the contiguousness rule,
-$\TUPLE{ 2, 3 }$ is invalid because it violates the contiguousness rule,
+$\TUPLE{ 3, 0 }$ is invalid because it violates the contiguous'ness rule,
+$\TUPLE{ 2, 3 }$ is invalid because it violates the contiguous'ness rule,
 and
 $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
@@ -1250,8 +1264,8 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
   % TODO: encoding
 }{
   Per~\cite[Figures 5]{SCARV:TilGro:06}, 
-  apply a (carefully structured) form of the AES 
-  $\ALG{S-box}$
+  apply a (carefully structured) form of an AES 
+  {\tt SubBytes}~\cite[Section 5.1.1]{SCARV:FIPS:197}
   operation:
   this is applicable to a column-oriented implementation of AES, whereby
   columns of the state (resp. round key) matrix are packed into $32$-bit
@@ -1299,8 +1313,10 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 }{
   Per~\cite[Figures 5]{SCARV:TilGro:06}, 
   apply a (carefully structured) form of the AES 
-  $\ALG{Mix-Column}$
-  operation:
+  {\tt ShiftRows}~\cite[Section 5.1.2]{SCARV:FIPS:197} 
+  and
+  {\tt MixColumns}~\cite[Section 5.1.3]{SCARV:FIPS:197}
+  operations:
   this is applicable to a column-oriented implementation of AES, whereby
   columns of the state (resp. round key) matrix are packed into $32$-bit
   words.
