Load byte/halfword update changes
- Closes #41

For `xc.ld.hu`
- If h == 0, low halfword of destination is set to loaded halfword,
  high halfword set to zero.
- If h == 1, low halfword unmodified, high halfword set to loaded
  halfword.

For `xc.ld.bu`
- If h == b == 0, low byte of destination is set to loaded byte,
  rest of register set to zero.
- If h || b != 1, destination register byte set to loaded byte,
  all other bytes of destination register unmodified.

 On branch dev/new-instructions
 Changes to be committed:
	modified:   docs/specification/spec-instruction.tex
	modified:   rtl/coprocessor/scarv_cop_mem.v
	modified:   verif/formal/fml_chk_instr_ld_bu.v
	modified:   verif/formal/fml_chk_instr_ld_hu.v

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -56,13 +56,22 @@
   \iencldbu
 }{
   Load a     byte from memory
-  into a specific     byte of a $\XCR$ register,
-  leaving the other     bytes in said register un-modified
-  (cf. \VERB[RV]{xc.ld.b}, which sets them to zero).
+  into a specific     byte of a $\XCR$ register.
+  If \VERB[RV]{h} or \VERB[RV]{b} are non-zero,
+  the other bytes in the destination register are left un-modified.
+  If \VERB[RV]{h} and \VERB[RV]{b} are zero,
+  the least-significant byte of the destination register
+  is set to the loaded byte, and all other bytes in the
+  destination register are cleared.
 }{
   $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
   $index                                         \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 0$ \;
   $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index  } \ASN \MEM[*][{addr  }]$ \;
+  \If{$index = 0$}{
+    $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{1} \ASN 0$ \;
+    $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{2} \ASN 0$ \;
+    $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{3} \ASN 0$ \;
+  }
 }
 
 % -----------------------------------------------------------------------------
@@ -72,57 +81,24 @@
 }{
   Load a halfword from memory
   into a specific halfword of a $\XCR$ register,
-  leaving the other halfword  in said register un-modified
-  (cf. \VERB[RV]{xc.ld.h}, which sets it   to zero).
+  If \VERB[RV]{h} is non-zero,
+  the low halfword of the destination register is left un-modified.
+  If \VERB[RV]{h} is zero,
+  the least-significant halfword of the destination register
+  is set to the loaded halfword, and all other halfwords in the
+  destination register are cleared.
 }{
   $addr                                                                    \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
   $index_0                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 0$ \;
   $index_1                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 1$ \;
   $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr+0}]$ \;
   $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN \MEM[*][{addr+1}]$ \;
+  \If{$index_0 = 0$}{
+    $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{2} \ASN 0$ \;
+    $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{3} \ASN 0$ \;
+  }
 }
 
-% -----------------------------------------------------------------------------
-
-\XCINSTR{xc.ld.b} {crd, h, b, imm11(rs1)}{
-  \iencldbu
-}{
-  Load a     byte from memory
-  into a specific     byte of a $\XCR$ register,
-  setting all other     bytes in said register to zero
-  (cf. \VERB[RV]{xc.ld.bu}, which leaves them un-modified).
-}{
-  $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $index_0                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 0$ \;
-  $index_1                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 1$ \;
-  $index_2                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 2$ \;
-  $index_3                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 3$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr  }]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN 0                $ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_2} \ASN 0                $ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_3} \ASN 0                $ \;
-}
-
-% -----------------------------------------------------------------------------
-
-\XCINSTR{xc.ld.h} {crd, h,    imm11(rs1)}{
-  \iencldhu
-}{
-  Load a halfword from memory
-  into a specific halfword of a $\XCR$ register,
-  setting the other halfword  in said register to zero
-  (cf. \VERB[RV]{xc.ld.hu}, which leaves it   un-modified).
-}{
-  $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $index_0                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 0$ \;
-  $index_1                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 1$ \;
-  $index_2                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 2$ \;
-  $index_3                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 3$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr+0}]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN \MEM[*][{addr+1}]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_2} \ASN 0                $ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_3} \ASN 0                $ \;
-}
 
 % -----------------------------------------------------------------------------
 
