Implement xc.rngtest instruction RTL.
- Encodings fixes to binutils
- Add encoding to specification
- Fix bug in formal check
- Add to unit tests for compilation checks.
- Closes #40

 On branch dev/new-instructions
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/spec-instruction.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_rng.v
	modified:   rtl/coprocessor/scarv_cop_top.v
	modified:   verif/formal/fml_chk_instr_rngtest.v
	modified:   verif/unit/19-random.S

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -181,7 +181,7 @@
 \label{sec:spec:instruction:2:1}
 
 \XCINSTR{xc.rngtest}{rd1}{
-  % TODO: encoding  
+  \iencrngtest
 }{
   Inspect the RNG state, applying a suitable ``health check'' on the level 
   of entropy available: the status flag is stored in a $\GPR$ register.
