Implement `xc.mclmul.1` instruction RTL
- Implement instruction RTL as part of MALU
- Fix some bit widths for instruction subclasses in decoder.
- Fix what I think is a typo in the spec.
- Make formal check easier to understand.
- Closes #37

 On branch dev/new-instructions
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   docs/specification/spec-instruction.tex
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_malu.v
	modified:   verif/formal/fml_chk_instr_mclmul_1.v
	modified:   verif/unit/37-mclmul.S

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -1047,7 +1047,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
   $
 }{
   $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{\otimes} \XCR[*][{\VERB[RV]{crs2}}] ) 
-                                                                \OP[64][u]{\oplus}  \XCR[*][{\VERB[RV]{crs3}}]$ \;
+                                                                \OP[64][u]{ +}  \XCR[*][{\VERB[RV]{crs3}}]$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN \INDEX{t}{31 \RANGE  0}$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN \INDEX{t}{64 \RANGE 32}$ \;
 }
