--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -665,6 +665,13 @@ instruction execution.
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
 \\
+{\tt xc.mclmul.1 }&
+    $tmp \ASN crs1 \otimes crs2$ \newline 
+ &  
+    $tmp \ASN tmp + crs3$\newline 
+    $rdm0\ASN tmp[31:0]$ 
+ &  $rdm1\ASN tmp[63:32]$ 
+\\
 {\tt xc.msll.i }&
     $tmp \ASN (crs1 \CONS crs2) \LSH cmshamt$\newline 
     $rdm0\ASN tmp[31:0]$ 
