Fix mclmul.1 instruction after misunderstanding carryless accumulate part
- Closes #37

 On branch dev/new-instructions
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   docs/specification/spec-instruction.tex
	modified:   rtl/coprocessor/scarv_cop_malu.v
	modified:   verif/formal/fml_chk_instr_mclmul_1.v

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -666,11 +666,10 @@ instruction execution.
  &  $rdm1\ASN tmp[63:32]$ 
 \\
 {\tt xc.mclmul.1 }&
-    $tmp \ASN crs1 \otimes crs2$ \newline 
- &  
-    $tmp \ASN tmp + crs3$\newline 
+    $tmp \ASN (crs1 \otimes crs2) \oplus crs3$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
+ &  
 \\
 {\tt xc.msll.i }&
     $tmp \ASN (crs1 \CONS crs2) \LSH cmshamt$\newline 
